invisible space remove

--- a/src/app/features/admin-layout/a-contentmgmt/content-mod/content-mod.component.html
+++ b/src/app/features/admin-layout/a-contentmgmt/content-mod/content-mod.component.html
@@ -1,4 +1,4 @@
-<section class="flex flex-col p-6 min-h-screen">
+<section class="flex flex-col p-6 max-h-screen">
   <div class="flex flex-col justify-center w-full overflow-hidden mt-4">
     <div
       class="relative flex flex-col w-full min-h-[500px] bg-cover rounded-lg shadow-lg"
@@ -11,6 +11,7 @@
             : 'none'
       }"
     >
+    
       <!-- Content Containers -->
       <div class="relative flex flex-col lg:flex-row gap-3 p-4 mt-4">
         <!-- Info -->
